tests/compile_fail/config/not_empty.stderr
error: The function name must not be empty.
 --> tests/compile_fail/config/not_empty.rs:6:18
  |
6 |     #[function = ""]
  |                  ^^
